force-app/main/default/objects/SystemIntegrationUsage__c/SystemIntegrationUsage__c.object-meta.xml
<CustomObject>
    <description>This contains inbound/outbound api consumption usage by date</description>
    <label>System Integration Usage</label>
    <nameField>
        <displayFormat>IUN-{0000000}</displayFormat>
        <label>Integration Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Integration Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>