force-app/main/default/objects/SystemIntegrationUsage__c/fields/Usage9PM__c.field-meta.xml
<CustomField>
    <fullName>Usage9PM__c</fullName>
    <description>Amount of usage within this hour block</description>
    <inlineHelpText>Amount of usage within this hour block</inlineHelpText>
    <label>Usage 9PM</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>